Change methods to Collection to match the other methods